personal page added

--- a/pages/CV.html
+++ b/pages/CV.html
@@ -46,13 +46,13 @@
         </tr>
         <tr>
             <td>2018-2023</td>
-            <td>СУ „Св. Климент Охридски“, Факултет по математика и информатика, София, България <br>
+            <td>СУ „Св. Климент Охридски“, <a href="https://www.fmi.uni-sofia.bg/">Факултет по математика и информатика</a>, София, България <br>
                 специалност: математика и информатика
                 </td>
         </tr>
         <tr>
             <td>2012-2017</td>
-            <td>133 СОУ „А. С. Пушкин“, София, България <br>
+            <td><a href="https://133sou.com/">133 СОУ „А. С. Пушкин“</a>, София, България <br>
                 профил: френски, руски и математика
                 </td>
         </tr>
@@ -62,13 +62,13 @@
         </tr>
         <tr>
             <td>2022-сега</td>
-            <td>Фондация Материка <br>
+            <td><a href="https://materika.bg/index.php/materika-sofia">Фондация Материка</a> <br>
                 Учител по математика
                 </td>
         </tr>
         <tr>
             <td>2018-2019</td>
-            <td>Софийски университет, ФМИ <br>
+            <td>Софийски университет, <a href="https://www.fmi.uni-sofia.bg/">ФМИ</a> <br>
                 Асистент по Линейна алгебра и аналитична геометрия
                 </td>
         </tr>
