index personal page + move index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Make links for ewery homehork -->
     <a href="./pages/CV.html" target="_blank">CV Eli Zlatkova</a>
     <br>
-    <a href="">Personal page</a>
+    <a href="./pages/Personal_page.html" target="_blank">Personal page</a>
 </body>
 
 </html>
