personal page add 5+ img

--- a/pages/Personal_page.html
+++ b/pages/Personal_page.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лична страничка на Ели</title>
+    <link rel="icon" href="../images/page_icon.png">
     <style>
         h1 {
-            color: rgb(13, 123, 190);
+            color: rgb(0, 122, 197);
             text-align: center;
         }
         h2 {
@@ -25,6 +26,24 @@
         }
         img {
             border: 2px solid #000000;
+        }
+        img.red1 {
+            border: 2px solid #ff0037;
+        }
+        img.red2 {
+            border: 2px solid #ff2755;
+        }
+        img.red3 {
+            border: 2px solid #ff5479;
+        }
+        img.red4 {
+            border: 2px solid #fd859f;
+        }
+        img.red5 {
+            border: 2px solid #ffb8c7;
+        }
+        img.red6 {
+            border: 2px solid #fdd7df;
         }
 
     </style>
@@ -92,15 +111,31 @@
 
     <h2>Защо записах курса към ProgressBG/Откъде разбрах за курса</h2>
     
-    <div>
-        Записах курса, за да се пренасоча да се занимавам с програмиране или по-конкретно с front-end. 
-    </div>
-
-    <div>
+    <P style="font-style: normal;">
+        Записах курса, за да се пренасоча да се занимавам с програмиране или по-конкретно с front-end. <br>
         За курса разбрах от приятелка, която го изкара преди няколко години и е много доволна.
-    </div>
+    </p>
 
+    <h2>Зодиите и техните черти</h2>
 
+    <a href="https://www.costarastrology.com/zodiac-signs/aries-sign">
+        <img class="red1" src="../images/zodiac_signs/aries.png" alt="Aries" title="Aries" height="100">
+    </a>
+    <a href="https://www.costarastrology.com/zodiac-signs/cancer-sign">
+        <img class="red2" src="../images/zodiac_signs/cancer.png" alt="Cancer" title="Cancer" height="100">
+    </a>
+    <a href="https://www.costarastrology.com/zodiac-signs/capricorn-sign">
+        <img class="red3" src="../images/zodiac_signs/capricorn.png" alt="Capricorn" title="Capricorn" height="100">
+    </a>
+    <a href="https://www.costarastrology.com/zodiac-signs/leo-sign">
+        <img class="red4" src="../images/zodiac_signs/lion.png" alt="Leo" title="Lion" height="100">
+    </a>
+    <a href="https://www.costarastrology.com/zodiac-signs/pisces-sign">
+        <img class="red5" src="../images/zodiac_signs/pisces.png" alt="Pisces" title="Pisces" height="100">
+    </a>
+    <a href="https://www.costarastrology.com/zodiac-signs/virgo-sign">
+        <img class="red6" src="../images/zodiac_signs/virgo.webp" alt="Virgo" title="Virgo" height="100">
+    </a>
 
 </body>
 
