--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./images/homework_icon.jpg">
     <style>
         h1 {
-            color: cornflowerblue;
+            color: rgb(49, 116, 240);
             font-size: larger;
             font-style: italic;
             font-weight: 700;
