links added to img

--- a/pages/Personal_page.html
+++ b/pages/Personal_page.html
@@ -111,29 +111,29 @@
 
     <h2>Защо записах курса към ProgressBG/Откъде разбрах за курса</h2>
     
-    <P style="font-style: normal;">
+    <p style="font-style: normal;">
         Записах курса, за да се пренасоча да се занимавам с програмиране или по-конкретно с front-end. <br>
         За курса разбрах от приятелка, която го изкара преди няколко години и е много доволна.
     </p>
 
     <h2>Зодиите и техните черти</h2>
 
-    <a href="https://www.costarastrology.com/zodiac-signs/aries-sign">
+    <a href="https://www.costarastrology.com/zodiac-signs/aries-sign" target="_blank">
         <img class="red1" src="../images/zodiac_signs/aries.png" alt="Aries" title="Aries" height="100">
     </a>
-    <a href="https://www.costarastrology.com/zodiac-signs/cancer-sign">
+    <a href="https://www.costarastrology.com/zodiac-signs/cancer-sign" target="_blank">
         <img class="red2" src="../images/zodiac_signs/cancer.png" alt="Cancer" title="Cancer" height="100">
     </a>
-    <a href="https://www.costarastrology.com/zodiac-signs/capricorn-sign">
+    <a href="https://www.costarastrology.com/zodiac-signs/capricorn-sign" target="_blank">
         <img class="red3" src="../images/zodiac_signs/capricorn.png" alt="Capricorn" title="Capricorn" height="100">
     </a>
-    <a href="https://www.costarastrology.com/zodiac-signs/leo-sign">
+    <a href="https://www.costarastrology.com/zodiac-signs/leo-sign" target="_blank">
         <img class="red4" src="../images/zodiac_signs/lion.png" alt="Leo" title="Lion" height="100">
     </a>
-    <a href="https://www.costarastrology.com/zodiac-signs/pisces-sign">
+    <a href="https://www.costarastrology.com/zodiac-signs/pisces-sign" target="_blank">
         <img class="red5" src="../images/zodiac_signs/pisces.png" alt="Pisces" title="Pisces" height="100">
     </a>
-    <a href="https://www.costarastrology.com/zodiac-signs/virgo-sign">
+    <a href="https://www.costarastrology.com/zodiac-signs/virgo-sign" target="_blank">
         <img class="red6" src="../images/zodiac_signs/virgo.webp" alt="Virgo" title="Virgo" height="100">
     </a>
 
