3rd list added+the two table tasks, index-updated

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             text-align: center;
             background-color: rgb(220, 232, 255);
         }
-        a {
+        h2 {
             background-color: rgb(255, 218, 223);
         }
+        
     </style>
 </head>
 
@@ -25,9 +26,25 @@
     <h1><b>List of my homework tasks</b></h1>
     <hr>
     <!-- Make links for ewery homehork -->
+    <h2>A little about me</h2>
     <a href="./pages/CV.html" target="_blank">CV Eli Zlatkova</a>
     <br>
     <a href="./pages/Personal_page.html" target="_blank">Personal page</a>
+    <br>
+    <h2>Lists</h2>
+    <a href="./pages/1_Ordered_and_Unordered_lists.html" target="_blank">Ordered and unordered lists</a>
+    <br>
+    <a href="./pages/2_Nested_lists_food.html" target="_blank">Nested list</a>
+    <br>
+    <a href="./pages/3_Nested_list_music.html" target="_blank">Double nested list music</a>
+    <br>
+    <h2>Tables</h2>
+    <a href="./pages/Slot_Machine_table3x3.html" target="_blank">Slot Machine</a>
+    <br>
+    <a href="./pages/FIFA_Table.html" target="_blank">FIFA Table</a>
+    <br>
+
+
 </body>
 
 </html>
