--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <br>
     <a href="./pages/FIFA_Table.html" target="_blank">FIFA Table</a>
     <br>
+    <h2>CSS</h2>
+    <a href="./pages/CSS_BasicProperties_crow.html" target="_blank">The crow</a>
 
 
 </body>
