html form task added + BMI js added

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
     <br>
     <a href="./pages/FIFA_Table.html" target="_blank">FIFA Table</a>
     <br>
+    <h2>Forms</h2>
+    <a href="./pages/simpleFormControls.html" target="_blank">Registration form</a>
+    <br>
     <h2>CSS</h2>
     <a href="./pages/CSS_BasicProperties_crow.html" target="_blank">The crow</a>
+
 
 
 </body>
